--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,13 @@
 {
   "manifest_version": 3,
-  "name": "Chrome Extension Template",
+  "name": "Tab Refresh",
   "version": "1.0",
-  "description": "A template Chrome extension built with Mantine UI",
-  "permissions": [],
+  "description": "A Chrome extension that keeps your web sessions active by preventing automatic refreshes on sites that require user interaction.",
+  "permissions": ["tabs", "activeTab", "storage"],
+  "background": {
+    "service_worker": "/src/background/background.js",
+    "type": "module"
+  },
   "action": {
     "default_popup": "index.html",
     "default_icon": {
