--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Tab Refresh",
-  "version": "1.3",
-  "description": "Automatically refresh browser tabs at customizable intervals to keep web sessions active. Features tab-specific timers, pause/resume functionality, and active tab skipping.",
+  "version": "1.4",
+  "description": "Automatically refresh browser tabs at customizable intervals to keep web sessions active. ",
   "permissions": ["tabs", "activeTab", "storage"],
   "background": {
     "service_worker": "/src/background/background.js",
